--- a/markdown_generator/OrcidToBib.ipynb
+++ b/markdown_generator/OrcidToBib.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "01f0c5c2-619a-48e0-bb7c-e5e0be009f0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orcid = '0000-0000-0000-0000' # Fill your orcid here"
+    "orcid = '0009-0002-8699-4087' # Fill your orcid here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "2fe4bc4e-4574-4322-8b18-0c4d33a749fa",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3b04331e-4149-4ca3-a0aa-89e3ba892723",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "16f7c42d-623b-421a-8d87-bbb389313e3b",
    "metadata": {
     "scrolled": true
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dd797a16-0d91-4271-8e1e-b82579a07e45",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "2ca1eca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[dedup] Zhai2024 (#1) → Zhai2024a\n",
+      "[dedup] Zhai2024 (#2) → Zhai2024b\n",
+      "[dedup] Zhai2024 (#3) → Zhai2024c\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在写文件前处理重复 key\n",
+    "def dedup_bib_keys(bib_entries):\n",
+    "    \"\"\"\n",
+    "    检查 BibTeX 字符串列表中的重复 key。\n",
+    "    - 如果某个 key 只出现一次，则保持不变；\n",
+    "    - 如果同 key 出现多次，则第1篇加 a，后续加 b/c/d/...；\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    from collections import defaultdict\n",
+    "\n",
+    "    pattern = re.compile(r'(@\\w+\\s*\\{\\s*)([^,\\s]+)', flags=re.MULTILINE)\n",
+    "    all_keys = []\n",
+    "    key_counts = defaultdict(int)\n",
+    "\n",
+    "    # 先收集所有 key 出现次数\n",
+    "    for entry in bib_entries:\n",
+    "        m = pattern.search(entry)\n",
+    "        if m:\n",
+    "            key = m.group(2)\n",
+    "            key_counts[key] += 1\n",
+    "            all_keys.append(key)\n",
+    "\n",
+    "    # 再进行改名\n",
+    "    used_indices = defaultdict(int)\n",
+    "    deduped_entries = []\n",
+    "\n",
+    "    for entry in bib_entries:\n",
+    "        m = pattern.search(entry)\n",
+    "        if not m:\n",
+    "            deduped_entries.append(entry)\n",
+    "            continue\n",
+    "\n",
+    "        prefix, key = m.group(1), m.group(2)\n",
+    "        count = key_counts[key]\n",
+    "        if count == 1:\n",
+    "            # ✅ 仅一篇，不改名\n",
+    "            deduped_entries.append(entry)\n",
+    "        else:\n",
+    "            # ✅ 多篇情况：第1篇 -> a，第2篇 -> b ...\n",
+    "            used_indices[key] += 1\n",
+    "            suffix_index = used_indices[key]\n",
+    "            suffix = chr(96 + suffix_index)  # 1→a, 2→b, ...\n",
+    "            new_key = f\"{key}{suffix}\"\n",
+    "            print(f\"[dedup] {key} (#{suffix_index}) → {new_key}\")\n",
+    "            new_entry = pattern.sub(f\"{prefix}{new_key}\", entry, count=1)\n",
+    "            deduped_entries.append(new_entry)\n",
+    "\n",
+    "    return deduped_entries\n",
+    "\n",
+    "# 去重处理\n",
+    "citations = dedup_bib_keys(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "ad763df9-261f-41f3-bc32-00921d0a4e11",
    "metadata": {},
    "outputs": [],
@@ -96,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "zxy",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
